--- a/app/views/bots/tutorial/_tasks.html.slim
+++ b/app/views/bots/tutorial/_tasks.html.slim
@@ -1,4 +1,4 @@
-.card.my-3: .card-block
+.card.my-3: .card-body
   h6.mb-4
     = material_icon 'bookmark_border', class: 'mi-sm mi-v-sub text-muted'
     = space
