--- a/app/views/contacts/new.html.slim
+++ b/app/views/contacts/new.html.slim
@@ -6,7 +6,7 @@
     br
 
     .card.card-outline-warning
-      .card-block
+      .card-body
           |My-ope officeご利用にあたってお気づきの点や不具合、
           br
           |及び機能要望などお気軽にお問い合わせください。
