--- a/app/views/exports/index.html.slim
+++ b/app/views/exports/index.html.slim
@@ -3,7 +3,7 @@
     = link_to '学習データインポート', bot_imports_path(@bot), class: 'btn btn-outline-primary', data: { event: 'import to learning data page' }
     = link_to '学習データエクスポート', bot_exports_path(@bot), class: 'btn btn-primary', data: { event: 'export to learning data page' }
 
-  .card.card-outline-secondary.mb-4: .card-block
+  .card.card-outline-secondary.mb-4: .card-body
     h5 学習データエクスポート機能とは
     |既に登録されている学習データをCSV形式でダウンロード出来る機能です。
     br
