--- a/app/views/settings/resets/show.html.slim
+++ b/app/views/settings/resets/show.html.slim
@@ -1,5 +1,5 @@
 = render layout: 'settings/shared/layout' do
-  .card: .card-block
+  .card: .card-body
     span(
       data-component="BotResetForm"
       data-url=bot_settings_reset_path(@bot)
