--- a/app/views/admin/tutorials/edit.html.slim
+++ b/app/views/admin/tutorials/edit.html.slim
@@ -24,5 +24,5 @@
       = f.submit 'Submit', class: 'btn btn-success'
 
   .card.border-danger
-    .card-block
+    .card-body
       = link_to 'Delete', admin_tutorial_path(@tutorial.id, bot_id: @bot.id), class: 'btn btn-danger', data: { method: :delete, confirm: 'Are you really want to delete?' }
