--- a/app/views/chat_tests/new.html.slim
+++ b/app/views/chat_tests/new.html.slim
@@ -1,7 +1,7 @@
 = render layout: 'bots/layout' do
   h5.mb-4 ボットテスト
 
-  .card.mb-4: .card-block
+  .card.mb-4: .card-body
     |ボットテスト機能は、csv形式の質問を一括投入することで、<br />
     |対応した回答が得られるかをテストし、結果のcsvファイルをダウンロードできます。
 
@@ -19,7 +19,7 @@
         .d-inline-block.align-top
           = submit_tag 'UTF-8でアップロード', class: 'btn btn-success', data: { event: 'upload with UTF_8' }
 
-      .card: .card-block
+      .card: .card-body
         .mb-2: strong テストデータ作成の注意点
         .mb-2
           |Excel等の表計算ソフトにてデータを作成する場合、<br />
