--- a/app/views/imports/show.html.slim
+++ b/app/views/imports/show.html.slim
@@ -3,7 +3,7 @@
     = link_to '学習データインポート', bot_imports_path(@bot), class: 'btn btn-primary', data: { event: 'import to learning data page' }
     = link_to '学習データエクスポート', bot_exports_path(@bot), class: 'btn btn-outline-primary', data: { event: 'export to learning data page' }
 
-  .card.card-outline-secondary.mb-4: .card-block
+  .card.card-outline-secondary.mb-4: .card-body
     h5 学習データインポート機能とは
     |このインポート機能は、学習データを一括で追加登録・編集する機能です。
     br
