--- a/app/views/threads/_summary.html.slim
+++ b/app/views/threads/_summary.html.slim
@@ -1,5 +1,5 @@
 .card.mb-4
-  .card-block
+  .card-body
     - if chat.guest_user.present?
       = render 'messages/guest_user', guest_user: chat.guest_user
     .text-center.mb-3= link_to 'これ以前の発言もすべて見る', bot_thread_messages_path(bot, chat), data: { event: 'check all chat log' }
