--- a/app/assets/stylesheets/app/modules/master-detail-panel.scss
+++ b/app/assets/stylesheets/app/modules/master-detail-panel.scss
@@ -22,7 +22,7 @@
     float: left;
     width: 30%;
     padding: 16px 0;
-    background-color: lighten($gray-lighter, 5%);
+    background-color: $gray-100;
   }
 
   &__detail {
