Add MYOPE_API_URL env variable

--- a/ansible/roles/app/templates/.env.j2
+++ b/ansible/roles/app/templates/.env.j2
@@ -25,3 +25,5 @@ RPC_HOST=127.0.0.1
 
 BASIC_AUTH_USER={{ basic_auth_user }}
 BASIC_AUTH_PASS={{ basic_auth_pass }}
+
+MYOPE_API_URL={{ myope_api_url[stage] }}
