--- a/app/assets/stylesheets/app/modules/chat/message.scss
+++ b/app/assets/stylesheets/app/modules/chat/message.scss
@@ -267,11 +267,11 @@
         transition-property: all;
       }
 
-      &:active {
-        .material-icons {
-          transform: scale(1.25);
-        }
-      }
+      // &:active {
+      //   .material-icons {
+      //     transform: scale(1.25);
+      //   }
+      // }
 
       &.good.active {
         color: $brand-success;
