--- a/app/assets/stylesheets/app/modules/chat/message.scss
+++ b/app/assets/stylesheets/app/modules/chat/message.scss
@@ -246,6 +246,7 @@
     }
 
     %base-rating-button {
+      position: relative;
       padding: 0 10px 0 0;
       font-size: 20px;
       color: darken($gray-lighter, 10%);
