Fix global header style bug

--- a/app/views/layouts/shared/ui/_header.html.slim
+++ b/app/views/layouts/shared/ui/_header.html.slim
@@ -1,18 +1,14 @@
 header
-  nav.navbar.navbar-light.navbar-global
-    .container.d-flex.justify-content-between
-      h1.navbar__logo.mr-auto= link_to 'My-ope office', root_path, data: { event: 'my-ope home' }
+  nav.navbar.navbar-light.navbar-global.navbar-expand
+    .container
+      h1.navbar__logo= link_to 'My-ope office', root_path, data: { event: 'my-ope home' }
+
       - if user_signed_in?
-        ul.navbar-nav.d-flex.flex-row
+        ul.navbar-nav
           li.nav-item
             = link_to 'ヘルプ', 'https://mofmof.zendesk.com/', class: 'nav-link', target: '_blank', data: { event: 'help' }
           li.nav-item
             = link_to 'サポート', new_contacts_path, class: 'nav-link', data: { event: 'click support' }
-          /li.nav-item
-            = link_to new_contacts_path, class: 'nav-link' do
-              span アップデート情報
-              = space
-              span.badge.badge-pill.badge-danger 1
           li.nav-item.dropdown
             = link_to current_user.email.split('@').first, '#', class: 'nav-link dropdown-toggle', id: 'navbarDropdownMenuLink', data: { toggle: "dropdown", event_name: 'Toggle account dropdown menu' }
             .dropdown-menu.dropdown-menu-right aria-labelledby="navbarDropdownMenuLink"
