--- a/app/assets/stylesheets/app/modules/chat/popover.scss
+++ b/app/assets/stylesheets/app/modules/chat/popover.scss
@@ -74,7 +74,8 @@
     }
   }
 
-  &__cover-message {
+  &__cover-message,
+  &__loading {
     position: absolute;
     top: 0;
     left: 0;
@@ -82,6 +83,9 @@
     right: 0;
     z-index: 100;
     background-color: #fff;
+  }
+
+  &__cover-message {
     border-radius: 4px;
 
     .inner {
@@ -100,5 +104,9 @@
       font-size: 14px;
       font-weight: bold;
     }
+  }
+
+  &__loading {
+    opacity: 0.5;
   }
 }
