--- a/app/views/exports/index.html.slim
+++ b/app/views/exports/index.html.slim
@@ -9,7 +9,7 @@
     br
     |ダウンロードしたCSVはそのままインポートにも使用できますので、一括でQ&amp;Aを更新したい場合もまずはエクスポートを行って下さい。
     br
-    |エクスポートファイルを作成すると、サーバーに保存されますので表示されたURLをクリックしてファイルをファウンロードして下さい。
+    |エクスポートファイルを作成すると、サーバーに保存されますので表示されたURLをクリックしてファイルをダウンロードして下さい。
 
   .row: .col-8.offset-2
     .form-group.text-center
