--- a/app/views/imports/show.html.slim
+++ b/app/views/imports/show.html.slim
@@ -12,6 +12,8 @@
     |idの欄が空の場合新しい質問が追加されます。
     br
     |idが一致しない場合でも以前のデータが削除されることはありません。
+    br
+    |ファイルの1行目はヘッダーとして無視されます。
 
     h5.pt-3 文字エンコードについて
     |Excelで作成したCSVファイルに特殊文字が含まれていると、インポート時に文字化けしたり?に変換されたりする可能性がありますのでご注意ください
