--- a/app/assets/stylesheets/app/modules/chat/message.scss
+++ b/app/assets/stylesheets/app/modules/chat/message.scss
@@ -246,10 +246,15 @@
     }
 
     %base-rating-button {
+      outline: none;
+      display: inline-block;
+      cursor: pointer;
       position: relative;
       padding: 0 10px 0 0;
       font-size: 20px;
       color: darken($gray-lighter, 10%);
+      border: 0;
+      background-color: transparent;
 
       &:last-child {
         padding: 0;
