--- a/app/assets/stylesheets/modules/chat/message.scss
+++ b/app/assets/stylesheets/modules/chat/message.scss
@@ -230,6 +230,8 @@
       padding: 0 10px 0 0;
       font-size: 20px;
       color: darken($gray-lighter, 10%);
+      border: 0;
+      background-color: transparent;
 
       &:last-child {
         padding: 0;
