--- a/app/assets/stylesheets/app/modules/chat/section.scss
+++ b/app/assets/stylesheets/app/modules/chat/section.scss
@@ -22,7 +22,7 @@ $chat-section-switch-size-xs: 32px;
     // padding: 0;
     max-height: 0;
     border-bottom: 0 !important;
-    overflow: hidden;
+    overflow: hidden !important;
   }
 }
 
