--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -2,10 +2,7 @@
   = render 'shared/pagination', resources: @tasks, per_page: @per_page
 
 = render layout: 'bots/layout' do
-  .card.card-outline-secondary.mb-3: .card-body
-    |対話タスクとは、うまくいかなかった対話（回答不可かBad評価の付いたもの）の記録をタスク形式で表示する機能です。
-    br
-    |この対話記録を元に新しくQ&Aを作成していただくか、対応済みにすることでタスクを消化できます。
+  = render('message')
 
   .text-center.mb-3
     .btn-group
