--- a/app/views/tasks/show.html.slim
+++ b/app/views/tasks/show.html.slim
@@ -1,8 +1,10 @@
 = render layout: 'bots/layout' do
-  .card.card-outline-secondary.mb-3: .card-body
-    |対話タスクとは、うまくいかなかった対話（回答不可かBad評価の付いたもの）の記録をタスク形式で表示する機能です。
-    br
-    |この対話記録を元に新しくQ&Aを作成していただくか、対応済みにすることでタスクを消化できます。
+  .mb-3
+    = link_to bot_tasks_path(@bot), class: 'text-muted' do
+      = material_icon 'keyboard_arrow_left', class: 'mi-xs'
+      = space
+      span 対話タスク一覧へ戻る
+  = render('message')
 
   .card.mb-5
     .card-body.p-4
@@ -30,13 +32,13 @@
         small.text-muted 日時：#{l @task.created_at}
       .text-align
         - if @task.is_done?
-          = link_to '未対応に戻す', bot_task_path(@bot, @task, is_done: 'false'), data: { method: :put }, class: 'btn btn-secondary btn-sm'
+          = link_to '未対応に戻す', bot_task_path(@bot, @task, is_done: 'false', redirect_to_show: true), data: { method: :put }, class: 'btn btn-secondary btn-sm'
           = space 5
           span.badge.badge-success 対応済み
         - else
           span.badge.badge-warning 未対応
           = space 5
-          = link_to "対応済みにする", bot_task_path(@bot, @task), method: :patch, class: "btn btn-secondary btn-sm", data: { event: 'to be processed' }
+          = link_to "対応済みにする", bot_task_path(@bot, @task, redirect_to_show: true), method: :patch, class: "btn btn-secondary btn-sm", data: { event: 'to be processed' }
 
           = space 5
           = link_to bot_task_path(@bot, @task, redirect_to_new_question_answer_form: true), method: :patch, class: 'btn btn-info btn-sm', data: { event: 'create questions from task' }
