--- a/app/views/answer_failed_mailer/create.text.erb
+++ b/app/views/answer_failed_mailer/create.text.erb
@@ -11,4 +11,4 @@
 このチャットの日時：<%= @guest_message.created_at %>
 
 この質問に対応できるように以下のページから登録と学習をしてみてください。
-<%= new_bot_question_answer_url(bot_id: @guest_message.chat.bot.id, question: @guest_message.body) %>
+<%= bot_task_url(@task.bot, @task)%>
