--- a/ansible/roles/app/templates/.env.j2
+++ b/ansible/roles/app/templates/.env.j2
@@ -27,3 +27,5 @@ BASIC_AUTH_USER={{ basic_auth_user }}
 BASIC_AUTH_PASS={{ basic_auth_pass }}
 
 MYOPE_API_URL={{ myope_api_url[stage] }}
+
+MECAB_PATH=/usr/local/lib/libmecab.so
