Fix support form

--- a/app/views/contacts/new.html.slim
+++ b/app/views/contacts/new.html.slim
@@ -13,16 +13,8 @@
 
   = form_for(:ticket, url: contacts_path, method: "post" ) do |f|
     .form-group
-      = f.label :email, 'メールアドレス'
-      = f.email_field :email, class: 'form-control', placeholder: "*記載されたメールアドレス宛に返信致します。"
-
-    .form-group
-      = f.label :subject, '件名'
-      = f.text_field :subject, class: 'form-control', placeholder: "例）〇〇画面で不具合が発生しました"
-
-    .form-group
       = f.label :description, 'お問合わせ内容'
-      = f.text_area :description, rows: 10, class: 'form-control', placeholder: "例）◯◯画面で✕✕の操作をするとエラー画面が表示されてしまいます"
+      = f.text_area :description, rows: 10, class: 'form-control', placeholder: "例）◯◯画面で✕✕の操作をするとエラー画面が表示されてしまいます", value: params.dig(:ticket, :description)
 
     .form-group.text-right
       = f.submit "送信する", class: "btn btn-success", data: { event: 'send inquiry' }
