--- a/app/assets/stylesheets/app/modules/tree.scss
+++ b/app/assets/stylesheets/app/modules/tree.scss
@@ -83,7 +83,9 @@
     }
 
     &-body {
+      display: block;
       line-height: 24px;
+      color: $base-text-color;
 
       .material-icons {
         margin-right: 5px;
