Implement async chat test

--- a/app/views/bots/_layout.html.slim
+++ b/app/views/bots/_layout.html.slim
@@ -68,7 +68,7 @@
               = material_icon 'book', class: 'text-gray-light mi-sm'
               = space
               span 辞書
-            = active_link_to new_bot_chat_test_path(@bot), class: 'dropdown-item', data: { event: 'bot test' } do
+            = active_link_to new_bot_chat_tests_path(@bot), class: 'dropdown-item', data: { event: 'bot test' } do
               = material_icon 'done_all', class: 'text-gray-light mi-sm'
               = space
               span ボットテスト
