--- a/app/views/tasks/_card.html.slim
+++ b/app/views/tasks/_card.html.slim
@@ -29,18 +29,19 @@
   .card-footer.d-flex.justify-content-between
     div
       small.text-muted 日時：#{l task.created_at}
-    .text-align
-      - if task.is_done?
-        = link_to '未対応に戻す', bot_task_path(bot, task, is_done: 'false', redirect_path: redirect_path), data: { method: :put }, class: 'btn btn-secondary btn-sm'
-        = space 5
-        span.badge.badge-success 対応済み
-      - else
-        span.badge.badge-warning 未対応
-        = space 5
-        = link_to "対応済みにする", bot_task_path(bot, task, redirect_path: redirect_path), method: :patch, class: "btn btn-secondary btn-sm", data: { event: 'to be processed' }
+    - unless local_assigns[:disable_controls]
+      .text-align
+        - if task.is_done?
+          = link_to '未対応に戻す', bot_task_path(bot, task, is_done: 'false', redirect_path: redirect_path), data: { method: :put }, class: 'btn btn-secondary btn-sm'
+          = space 5
+          span.badge.badge-success 対応済み
+        - else
+          span.badge.badge-warning 未対応
+          = space 5
+          = link_to "対応済みにする", bot_task_path(bot, task, redirect_path: redirect_path), method: :patch, class: "btn btn-secondary btn-sm", data: { event: 'to be processed' }
 
-        = space 5
-        = link_to bot_task_path(bot, task, redirect_path: new_bot_question_answer_path(bot, question: task.guest_message, answer: task.bot_message)), method: :patch, class: 'btn btn-info btn-sm', data: { event: 'create questions from task' }
-          i.fa.fa-arrow-right
-          = space
-          span これを元にQ&Aを登録する
+          = space 5
+          = link_to bot_task_path(bot, task, redirect_path: new_bot_question_answer_path(bot, question: task.guest_message, answer: task.bot_message)), method: :patch, class: 'btn btn-info btn-sm', data: { event: 'create questions from task' }
+            i.fa.fa-arrow-right
+            = space
+            span これを元にQ&Aを登録する
